[project]
name = "jdaviz"
description = "Astronomical data analysis development leveraging the Jupyter platform"
requires-python = ">=3.10"
authors = [
    { name = "JDADF Developers", email = "help@stsci.edu" },
]
dependencies = [
    "packaging",
    "astropy>=6",
    "matplotlib>=3.6",
    "traitlets>=5.0.5",
    "bqplot>=0.12.37",
    "glue-core>=1.22.0",
    "glue-jupyter>=0.23.0",
    "echo>=0.5.0",
    "ipykernel>=6.19.4",
    "ipyvue>=1.6",
    "ipyvuetify>=1.7.0",
    "ipysplitpanes>=0.1.0",
    "ipygoldenlayout>=0.3.0",
    "ipywidgets>=8.0.6",
    "solara>=1.40.0",
    "pyyaml>=5.4.1",
    "specutils>=1.18",
    "specreduce>=1.4.1,<1.5",
    "photutils>=1.12.1",
    "glue-astronomy>=0.10",
    "asteval>=0.9.23",
    "idna",
    "vispy>=0.6.5",
    "asdf>=2.14.3",
    "stdatamodels>=1.3",
    "gwcs>=0.16.1",
    "regions>=0.6",
    "scikit-image",
    "sidecar>=0.5.2",
    "ipypopout>=2.0.0",
    "astroquery",
    "requests",
    "nbclassic",
    # pyvo pin can be removed once astroquery's pyvo dep pulls in 1.5.3
    "pyvo>=1.5.3",
]
dynamic = [
    "version",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.license]
file = "licenses"
content-type = "text/plain"

[project.urls]
Homepage = "https://jdaviz.readthedocs.io/en/latest/"

[project.scripts]
jdaviz = "jdaviz.cli:_main"

[project.entry-points.jdaviz_plugins]
default = "jdaviz.configs.default"
cubeviz = "jdaviz.configs.cubeviz"
specviz = "jdaviz.configs.specviz"
mosviz = "jdaviz.configs.mosviz"
imviz = "jdaviz.configs.imviz"

[project.optional-dependencies]
all = [
    "opencv-python",
    "pysiaf"
]
test = [
    "pytest",
    "pytest-astropy",
    "pytest-tornasync"
]
docs = [
    "sphinx-astropy[confv2]>=1.9.1",
    "sphinx_design"
]
roman = [
    "roman_datamodels>=0.22.0",
]
strauss = [
    "strauss",
]
qt = [
    "qtpy",
    "PySide6"
]

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = [
    "LICENSE.rst",
]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
jdaviz = [
    "data/*",
    "data/*/*",
    "*.vue",
    "*.css",
    "components/*.vue",
    "configs/*/*/*/*.vue",
    "configs/*/*.yaml",
    "jdaviz_cli.ipynb",
    "jdaviz_cli_launcher.ipynb",
]
"jdaviz.configs.imviz.tests" = [
    "data/*",
]

[tool.pytest.ini_options]
testpaths = [
    "\"jdaviz\"",
    "\"docs\"",
]
astropy_header = true
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst --import-mode=append --ignore-glob='*/jdaviz/qt.py'"
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:numpy\\.ufunc size changed:RuntimeWarning",
    "ignore:numpy\\.ndarray size changed:RuntimeWarning",
    "ignore:Passing unrecognized arguments to super:DeprecationWarning",
    "ignore:.*With traitlets 4\\.1, metadata should be set using the \\.tag\\(\\) method:DeprecationWarning",
    "ignore:The unit 'Angstrom' has been deprecated in the VOUnit standard\\. Suggested.* 0\\.1nm\\.",
    "ignore:((.|\n)*)Sentinel is not a public part of the traitlets API((.|\n)*)",
    "ignore:datetime\\.datetime\\.utcfromtimestamp:DeprecationWarning",  # asdf + dateutil<=2.8.2 + Python 3.12
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13",
    "ignore:Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython.display",
    "ignore:Parsing dates involving a day of month without a year:DeprecationWarning",  # ipykernel<7
    "ignore::DeprecationWarning:glue",
    "ignore::DeprecationWarning:asteval",
    "ignore:::specutils.spectra.spectrum1d",
    # Ignore numpy 2.0 warning, see https://github.com/astropy/astropy/pull/15495
    # and https://github.com/scipy/scipy/pull/19275
    "ignore:.*numpy\\.core.*:DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "jdaviz/conftest.py",
    "jdaviz/*setup_package*",
    "jdaviz/tests/*",
    "jdaviz/**/tests/*",
    "jdaviz/extern/*",
    "jdaviz/version*",
    "*/jdaviz/conftest.py",
    "*/jdaviz/*setup_package*",
    "*/jdaviz/tests/*",
    "*/jdaviz/**/tests/*",
    "*/jdaviz/extern/*",
    "*/jdaviz/version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main\\(.*\\):",
    "pragma: py{ignore_python_version}",
    "def _ipython_key_completions_",
]
