[project]
name = "jdaviz"
description = "Astronomical data analysis development leveraging the Jupyter platform"
requires-python = ">=3.12"
authors = [
    { name = "JDADF Developers"},
]
dependencies = [
    "packaging",
    "astropy>=7.2",
    "matplotlib>=3.6",
    "traitlets>=5.0.5",
    "bqplot>=0.12.45,<0.13",
    "glue-core>=1.24.0",
    "glue-jupyter @ git+https://github.com/glue-viz/glue-jupyter.git@refs/pull/519/head",
    "echo>=0.15.0",
    "ipykernel>=7.1.0",
    "ipyvue>=3.0.0a9",
    "ipyvuetify>=3.0.0a6",
    "ipywidgets>=8.0.6",
    "solara-ui[all] @ https://nbg1.your-objectstorage.com/ipyvue3-packages/packages/solara/solara_ui-2.0.0a2-py3-none-any.whl",
    "solara-server[starlette,dev] @ https://nbg1.your-objectstorage.com/ipyvue3-packages/packages/solara-server/solara_server-2.0.0a2-py3-none-any.whl",
    "solara @ https://nbg1.your-objectstorage.com/ipyvue3-packages/packages/solara-meta/solara-2.0.0a2-py3-none-any.whl",
    "pyyaml>=5.4.1",
    "specutils>=2.0.0",
    "specreduce>=1.6.0",
    "photutils>=2.2",
    "glue-astronomy>=0.12.0",
    "asteval>=0.9.23",
    "idna",
    "vispy>=0.6.5",
    "asdf>=2.14.3",
    "stdatamodels>=1.3",
    "gwcs>=0.16.1",
    "regions>=0.6",
    "scikit-image",
    "sidecar>=0.5.2",
    "ipypopout @ git+https://github.com/widgetti/ipypopout.git@refs/pull/19/head",
    "astroquery",
    "requests",
    "nbclassic",
    # pyvo pin can be removed once astroquery's pyvo dep pulls in 1.5.3
    "pyvo>=1.5.3",
    "s3fs>=2024.10.0",
    "joblib>=1.3.0",
    "spherical-geometry", "roman-datamodels>=1.0.0,<2",
]
license-files = ["LICENSE.rst", "licenses/IPYFILECHOOSER_LICENSE.rst", "licenses/IMEXAM_LICENSE.txt", "licenses/GINGA_LICENSE.txt", "licenses/TEMPLATE_LICENCE.rst"]
dynamic = [
    "version",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://jdaviz.readthedocs.io/en/latest/"

[project.scripts]
jdaviz = "jdaviz.cli:_main"

[project.entry-points.jdaviz_plugins]
default = "jdaviz.configs.default"
cubeviz = "jdaviz.configs.cubeviz"
specviz = "jdaviz.configs.specviz"
mosviz = "jdaviz.configs.mosviz"
imviz = "jdaviz.configs.imviz"

[project.optional-dependencies]
all = [
    "opencv-python",
    "pysiaf",
    "strauss",
    "qtpy",
    "PySide6",
    "roman_datamodels>=0.26.0"
]
test = [
    "pytest",
    "pytest-astropy",
    "pytest-tornasync",
    "pytest-xdist>=3.6"
]
docs = [
    "sphinx-astropy[confv2]>=1.9.1",
    "sphinx_design",
    "sphinx-guidestar>=0.2.0,<0.3.0"
]
roman = [
    "roman_datamodels>=0.26.0",
]
strauss = [
    "strauss",
]
qt = [
    "qtpy",
    "PySide6"
]

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Pixi + uv configuration (proof of concept replacing conda/pip + tox in CI).
#
# Pixi manages the environments and task running (the role tox/conda played),
# while all PyPI packages (everything in [project.dependencies] and the
# optional-dependency groups below) are resolved and installed by uv, which
# Pixi uses under the hood for `pypi-dependencies`.
#
# Only a couple of things come from conda-forge: the Python interpreter and the
# portaudio system library needed by the strauss audio dependency. Fast,
# environment-independent checks (flake8, bandit, sdist build) run with uv
# standalone in CI instead of Pixi.
#
# Common commands:
#   pixi run -e test-py313 test       # run the test suite on Python 3.13
#   pixi run -e test-all test-cov     # all optional deps + coverage
#   pixi run -e docs docs             # build the HTML docs
#
# Fast, standalone jobs that do not need the full environment are run directly
# with uv (see the CI workflows):
#   uvx flake8 jdaviz --count
#   uvx bandit -r jdaviz -c .bandit.yaml
#   uv build --sdist && uvx twine check dist/* --strict
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

# Install jdaviz itself as an editable PyPI dependency (installed by uv). Pixi
# automatically maps everything in [project.dependencies] and the
# [project.optional-dependencies] groups to uv-installed pypi-dependencies /
# features, so nothing else needs to be repeated here.
[tool.pixi.pypi-dependencies]
jdaviz = { path = ".", editable = true }

# --- Python interpreter versions (conda-forge) -----------------------------
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

# --- Developer tooling ------------------------------------------------------
# NOTE: flake8 (codestyle), bandit (security audit) and building the sdist do
# not need the full jdaviz environment. Because Pixi always includes the
# project's dependencies in every environment, running them through Pixi would
# needlessly install the entire stack. In CI those fast jobs are run with uv
# standalone instead (`uvx flake8`, `uvx bandit`, `uv build`, `uvx twine`).

# portaudio (providing libportaudio) is a system dependency of strauss; supply
# it from conda-forge for the environments that pull strauss in (the `all` and
# `strauss` extras).
[tool.pixi.feature.all.dependencies]
portaudio = "*"

[tool.pixi.feature.strauss.dependencies]
portaudio = "*"

# --- Tasks -----------------------------------------------------------------
[tool.pixi.feature.test.tasks]
test = "pytest -n auto --dist loadfile --pyargs jdaviz docs --ignore=jdaviz/qt.py --durations=30 --memlog"
test-cov = "pytest -n auto --dist loadfile --pyargs jdaviz docs --cov jdaviz --cov-config=pyproject.toml --ignore=jdaviz/qt.py --durations=30 --memlog && coverage xml -o coverage.xml"

[tool.pixi.feature.docs.tasks]
docs = "sphinx-build -b html docs docs/_build/html"
linkcheck = "sphinx-build -W -b linkcheck docs docs/_build/html"

# --- Environments (combinations of the features above) ---------------------
# NOTE: the `test` task is intentionally NOT part of the `default` environment.
# Because it is defined in several environments, running `pixi run test` (with
# no `-e`) is ambiguous, so pixi presents an interactive picker to choose the
# environment (test-py312 / test-py313 / test-py314 / test-all / roman /
# strauss). Use `pixi run -e <env> test` to skip the picker (as CI does).
[tool.pixi.environments]
default = { features = ["py313"] }
test-py312 = { features = ["py312", "test"] }
test-py313 = { features = ["py313", "test"] }
test-py314 = { features = ["py314", "test"] }
test-all = { features = ["py313", "test", "all"] }
roman = { features = ["py312", "test", "roman"] }
strauss = { features = ["py313", "test", "strauss"] }
docs = { features = ["py313", "docs"] }

[tool.pixi.dependencies]
jupyter = ">=1.1.1,<2"
pytest = ">=9.1.1,<10"
pytest-xdist = ">=3.8.0,<4"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
jdaviz = [
    "data/*",
    "data/*/*",
    "*.vue",
    "*.css",
    "components/*.vue",
    "temp_components/*.vue",
    "configs/*/*/*/*.vue",
    "configs/*/*.yaml",
    "jdaviz_cli.ipynb",
    "jdaviz_cli_launcher.ipynb",
    "ext/wireframe/static/*",
]
"jdaviz.configs.imviz.tests" = [
    "data/*",
]

[tool.pytest.ini_options]
testpaths = [
    "jdaviz",
    "docs",
]
astropy_header = true
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst --import-mode=append --ignore-glob='*/jdaviz/qt.py'"
xfail_strict = true
filterwarnings = [
    "error",
    # Ignore SSL socket warnings from failed astroquery requests (e.g., when Gaia archive is down)
    "ignore:Exception ignored in.*ssl\\.SSLSocket.*:pytest.PytestUnraisableExceptionWarning",
    # This line handles the DeprecationWarning from jupyter_core
    "ignore:Jupyter is migrating its paths.*:DeprecationWarning:jupyter_core.utils",
    # This ignores AstropyPendingDeprecationWarning from spectral_cube
    "ignore:COPY_IF_NEEDED is no longer needed now that astropy only supports numpy >= 2",
    "ignore:numpy\\.ufunc size changed:RuntimeWarning",
    "ignore:numpy\\.ndarray size changed:RuntimeWarning",
    "ignore:Passing unrecognized arguments to super:DeprecationWarning",
    "ignore:.*With traitlets 4\\.1, metadata should be set using the \\.tag\\(\\) method:DeprecationWarning",
    "ignore:The unit 'Angstrom' has been deprecated in the VOUnit standard\\. Suggested.* 0\\.1nm\\.",
    "ignore:((.|\n)*)Sentinel is not a public part of the traitlets API((.|\n)*)",
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13",
    "ignore::DeprecationWarning:glue",
    "ignore:The load_data function is deprecated.*",
    "ignore:.*show_in_viewer.*:DeprecationWarning",
    # This warning will not fail in CI, but causes issues running tests locally on Windows so test locally if considering
    # removing this in the future
    "ignore:Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython.display",
    # This is needed until https://github.com/astropy/astropy/issues/19216 is resolved
    "ignore:The chararray class is deprecated and will be removed in a future release:DeprecationWarning",
    # Ignore config deprecation warnings in tests
    "ignore:Cubeviz is deprecated and will be removed in version 5.2.*:DeprecationWarning",
    "ignore:Imviz is deprecated and will be removed in version 5.2.*:DeprecationWarning",
    "ignore:Rampviz is deprecated and will be removed in version 5.2.*:DeprecationWarning",
    "ignore:Specviz is deprecated and will be removed in version 5.2.*:DeprecationWarning",
    "ignore:Specviz2d is deprecated and will be removed in version 5.2.*:DeprecationWarning",
    "ignore:The TestRunner class will be deprecated in a future version.",
    "ignore:The TestRunnerBase class will be deprecated in a future version.",
    # TODO: this will be handled by a future gwcs release, it was fixed in
    #   https://github.com/spacetelescope/gwcs/pull/740
    "ignore:Calling .*lu.* with arguments.*is deprecated in SciPy 1.18.0:DeprecationWarning"
]


[tool.coverage.run]
omit = [
    "jdaviz/conftest.py",
    "jdaviz/pytest_utilities/*",
    "jdaviz/*setup_package*",
    "jdaviz/tests/*",
    "jdaviz/**/tests/*",
    "jdaviz/extern/*",
    "jdaviz/version*",
    "*/jdaviz/conftest.py",
    "*/jdaviz/*setup_package*",
    "*/jdaviz/tests/*",
    "*/jdaviz/**/tests/*",
    "*/jdaviz/extern/*",
    "*/jdaviz/version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main\\(.*\\):",
    "pragma: py{ignore_python_version}",
    "def _ipython_key_completions_",
]
