[metadata]
name = jdaviz
author = JDADF Developers
author_email = nearl@stsci.edu
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://jdaviz.readthedocs.io/en/latest/
description = Astronomical data analysis development leveraging the Jupyter platform
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = spacetelescope/jdaviz

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy>=4.2
    traitlets>=5.0.5
    bqplot>=0.12.29
    bqplot-image-gl>=1.4.1
    glue-core>=1.0.1
    glue-jupyter>=0.7
    echo>=0.5.0
    ipyvue>=1.4.1
    ipyvuetify>=1.7.0
    ipysplitpanes>=0.1.0
    ipygoldenlayout>=0.3.0
    voila>=0.2.4
    pyyaml>=5.4.1
    specutils>=1.3
    glue-astronomy@git+https://github.com/glue-viz/glue-astronomy.git@4c5e6e78bcaa20d1723510f06bbe3070f2b1642a
    click>=7.1.2
    spectral-cube>=0.5
    asteval>=0.9.23
    # Some users were experiencing a version conflict for idna
    idna<3.0
    # vispy is an indirect dependency, but older vispy's don't play nice with jdaviz install
    vispy>=0.6.5

[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-tornasync
docs =
    sphinx-rtd-theme
    sphinx-astropy
all =
    scikit-image
    jwst>=1.2.1

[options.package_data]
jdaviz =
    data/*
    *.vue
    jdaviz/configs/imviz/imviz.yaml

[options.entry_points]
console_scripts =
gui_scripts =
    jdaviz = jdaviz.cli:main
jdaviz_plugins =
    default = jdaviz.configs.default
    cubeviz = jdaviz.configs.cubeviz
    specviz = jdaviz.configs.specviz
    mosviz = jdaviz.configs.mosviz
    imviz = jdaviz.configs.imviz

[tool:pytest]
testpaths = "jdaviz" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --import-mode=append -Wignore

[flake8]
max-line-length = 100
# E123: closing bracket does not match indentation of opening bracket's line
# E126: continuation line over-indented for hanging indent
# E226: missing whitespace around arithmetic operator
# E402: Module level import not at top of file
# W503: line break before binary operator
# W504: line break after binary operator
ignore = E123,E126,E226,E402,W503,W504

[coverage:run]
omit =
    jdaviz/_astropy_init*
    jdaviz/conftest.py
    jdaviz/*setup_package*
    jdaviz/tests/*
    jdaviz/*/tests/*
    jdaviz/extern/*
    jdaviz/version*
    */jdaviz/_astropy_init*
    */jdaviz/conftest.py
    */jdaviz/*setup_package*
    */jdaviz/tests/*
    */jdaviz/*/tests/*
    */jdaviz/extern/*
    */jdaviz/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
