[metadata]
name = jdaviz
author = JDADF Developers
author_email = rosteen@stsci.edu
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://jdaviz.readthedocs.io/en/latest/
description = Astronomical data analysis development leveraging the Jupyter platform
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = spacetelescope/jdaviz

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    packaging
    astropy>=4.3
    matplotlib
    traitlets>=5.0.5
    bqplot>=0.12.36
    bqplot-image-gl>=1.4.11
    glue-core>=1.6.0
    glue-jupyter>=0.15.0
    echo>=0.5.0
    ipykernel>=6.19.4
    ipyvue>=1.6
    ipyvuetify>=1.7.0
    ipysplitpanes>=0.1.0
    ipygoldenlayout>=0.3.0
    ipywidgets>=8
    voila>=0.4
    pyyaml>=5.4.1
    specutils>=1.9
    specreduce>=1.3.0,<1.4.0
    photutils>=1.4
    glue-astronomy>=0.5.1
    asteval>=0.9.23
    idna
    # vispy is an indirect dependency, but older vispy's don't play nice with jdaviz install
    vispy>=0.6.5
    asdf>=2.14.3
    gwcs>=0.16.1
    regions>=0.6
    scikit-image
    sidecar>=0.5.2
    ipypopout>=0.0.11
    astroquery

[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-tornasync
docs =
    sphinx-rtd-theme
    sphinx-astropy

[options.package_data]
jdaviz =
    data/*
    data/*/*
    *.vue
    components/*.vue
    configs/*/*/*/*.vue
    configs/*/*.yaml
    configs/*/*.ipynb
jdaviz.configs.imviz.tests = data/*

[options.entry_points]
console_scripts =
    jdaviz = jdaviz.cli:_main
    specviz = jdaviz.cli:_specviz
    specviz2d = jdaviz.cli:_specviz2d
    imviz = jdaviz.cli:_imviz
    cubeviz = jdaviz.cli:_cubeviz
    mosviz = jdaviz.cli:_mosviz
gui_scripts =
jdaviz_plugins =
    default = jdaviz.configs.default
    cubeviz = jdaviz.configs.cubeviz
    specviz = jdaviz.configs.specviz
    mosviz = jdaviz.configs.mosviz
    imviz = jdaviz.configs.imviz

[tool:pytest]
testpaths = "jdaviz" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --import-mode=append
filterwarnings =
    error
    ignore:numpy\.ufunc size changed:RuntimeWarning
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore:Numpy has detected that you:DeprecationWarning
    ignore:distutils Version classes are deprecated:DeprecationWarning
    ignore:Passing unrecognized arguments to super:DeprecationWarning
    ignore:.*With traitlets 4\.1, metadata should be set using the \.tag\(\) method:DeprecationWarning
    ignore:Widget.* is deprecated:DeprecationWarning
    ignore:.*np\.bool8.*is a deprecated alias for:DeprecationWarning
    ignore:.*np\.uint0.*is a deprecated alias for:DeprecationWarning
    ignore:.*np\.int0.*is a deprecated alias for:DeprecationWarning
    ignore:zmq\.eventloop\.ioloop is deprecated in pyzmq:DeprecationWarning
    ignore::DeprecationWarning:glue
    ignore::DeprecationWarning:bqplot
    ignore::DeprecationWarning:bqplot_image_gl
    ignore::DeprecationWarning:bqscales
    ignore::DeprecationWarning:traittypes
    ignore::DeprecationWarning:voila
    ignore:::specutils.spectra.spectrum1d

[flake8]
max-line-length = 100
# E123: closing bracket does not match indentation of opening bracket's line
# E126: continuation line over-indented for hanging indent
# E226: missing whitespace around arithmetic operator
# E402: Module level import not at top of file
# W503: line break before binary operator
# W504: line break after binary operator
ignore = E123,E126,E226,E402,W503,W504

[coverage:run]
omit =
    jdaviz/_astropy_init*
    jdaviz/conftest.py
    jdaviz/*setup_package*
    jdaviz/tests/*
    jdaviz/*/tests/*
    jdaviz/extern/*
    jdaviz/version*
    */jdaviz/_astropy_init*
    */jdaviz/conftest.py
    */jdaviz/*setup_package*
    */jdaviz/tests/*
    */jdaviz/*/tests/*
    */jdaviz/extern/*
    */jdaviz/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
